--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==5.0
-requests==2.31.0
 djangorestframework==3.14.0
+djoser==2.1.0
+numpy==1.26.1
+pandas==2.1.2
+pytz==2023.3.post1
+python-docx==1.0.1
+requests==2.31.0
 PyQt5==5.15.10
+PyQtChart==5.15.6
